<resources>
    <string name="app_name">Autism Helper</string>
    <string name="progress_dialog">"Please  Wait ..."</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>

    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_field_required">Email address is required</string>
    <string name="email_phone_field_required">Email address / Phone number is required</string>

    <string name="password_field_required">Password is required</string>
    <string name="conf_password_field_required"> Confirm password is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="passwords_dont_match">Passwords do not match !</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_password">Password</string>
    <string name="hint_email_phone">Email address / phone number</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="error_login">Incorrect Email address/Phone number or Password provided</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_doctor_main">DoctorMainActivity</string>
    <string name="title_activity_parent_main">ParentMainActivity</string>
    <string name="add_doctor_title">Add Doctor</string>
    <string name="delete_doctor_title">Delete Doctor</string>
    <string name="delete_parent_title">Delete Parent</string>
    <string name="action_logout">Logout</string>
    <string name="hint_email">Email address</string>
    <string name="hint_phone">Phone number</string>
    <string name="btn_link_to_login"> Already have an account ?</string>
    <string name="hint_specialized">Specialized</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="duplicate_account">Email address or Phone number is already exit!</string>
    <string name="scf_add_doctor">Doctor addedd successfully !</string>
    <string name="specialized_1">sp1</string>
    <string name="specialized_2">sp2</string>
    <string name="specialized_3">sp3</string>
    <string name="specialized_4">sp4</string>
    <string name="specialized_5">sp5</string>
    <string name="choose_doctor">Choose doctor : </string>
    <string name="choose_parent">Choose parent : </string>
    <string name="confirm_delete">Do you really want to delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint_conf_password">Confirm password</string>
    <string name="err_delete_doctor">Deleting doctor Failed</string>
    <string name="err_delete_parent">Deleting parent Failed</string>
    <string name="scf_delete_doctor">The doctor was deleted successfully</string>
    <string name="scf_delete_parent">The parent was deleted successfully</string>
    <string name="please_wait">Please Wait . . .</string>
</resources>
