<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".admin_panel.AdminMainActivity">

    <Button
        android:id="@+id/add_doctor_btn"
        android:layout_width="350px"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="103dp"
        android:text="@string/add_doctor_title" />

    <Button
        android:id="@+id/delete_doctor_btn"
        android:layout_width="350px"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/add_doctor_btn"
        android:layout_below="@+id/add_doctor_btn"
        android:layout_marginTop="49dp"
        android:text="@string/delete_doctor_title" />

    <Button
        android:id="@+id/delete_parent_btn"
        android:layout_width="350px"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_alignStart="@+id/delete_doctor_btn"
        android:layout_below="@+id/delete_doctor_btn"
        android:layout_marginTop="46dp"
        android:text="@string/delete_parent_title" />
</RelativeLayout>
